@@ -4,6 +4,10 @@ Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
 September 15, 2023
 
+
+Changed radar's visible arena section lines to use 
+arcade style thick rectangle sections.
+
 Added boolean RaderIsPlayerCentric pref which, if false, 
 arcade matches the radar centricity where the edges of 
 the visible arena stay fixed in position instead of 
